--- a/README.rdoc
+++ b/README.rdoc
@@ -27,4 +27,6 @@ Things you may want to cover:
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
 
-
+rake db:create
+rake db:migrate
+rails s
