--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -1,27 +1,38 @@
 zh-CN:
+  book: 菜谱
+  dish: 名菜
+  burden: 做法
+  material: 配料
+  meal: 饭顿
+  order: 菜单
+  register: 注册
+  profile: 我的资料
+  login: 登录
+  logout: 注销
+  breakfast: 早饭
+  lunch: 中饭
+  dinner: 晚饭
+  name: 名称
+  balance: 库存
+  new: 新建
+  create: 创建
+  show: 显示
+  edit: 编辑
+  destroy: 删除
+  up: 上移
+  down: 下移
+  type: 类型
+  back: 返回
+  quantity: 数量
+  listing: 列表
+  page: 页码
+  login.name: 登录名
+  password: 密码
+  please.login: 请登录
+  url: 网址
+  g: 克
   label:
-    new: 新建
-    create: 创建    
-    show: 显示
-    edit: 编辑
-    destroy: 删除
-    up: 上移
-    down: 下移
     date: 日期
-    type: 类型	
-    book: 菜谱
-    dish: 名菜
-    burden: 做法
-    material: 配料
-    meal: 饭顿
-    order: 菜单
-    register: 注册
-    profile: 我的资料  
-    login: 登录
-    logout: 注销   
-    breakfast: 早饭
-    lunch: 中饭
-    dinner: 晚饭    
   date:
     abbr_day_names:
     - 日
@@ -139,17 +150,17 @@ zh-CN:
       not_an_integer: 必须是整数
       odd: 必须为单数
       record_invalid: ! '验证失败: %{errors}'
-      restrict_dependent_destroy: 
+      restrict_dependent_destroy:
         one: 由於 %{record} 需要此记录，所以无法移除记录
         many: 由於 %{record} 需要此记录，所以无法移除记录
       taken: 已经被使用
-      too_long: 
+      too_long:
         one: 过长（最长为一个字符）
         other: 过长（最长为 %{count} 个字符）
-      too_short: 
+      too_short:
         one: 过短（最短为一个字符）
         other: 过短（最短为 %{count} 个字符）
-      wrong_length: 
+      wrong_length:
         one: 长度非法（必须为一个字符）
         other: 长度非法（必须为 %{count} 个字符）
       other_than: 长度非法（不可为 %{count} 个字符
